[build-system]
requires = [ "setuptools>=61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "endurance-screen"
version = "1.0.1"
description = "A heads-up display for endurance planning"
dependencies = [ "flask", "requests",]

[project.scripts]
endure = "endurance_screen.endure:main"
endure-server = "endurance_screen.main:main"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "endurance_screen*",]
